# bevy_ascii_tetris

./: Cargo.toml  LICENSE  README.md  bevy_ascii_tetris-a4d0f7ca2305a58a.js  bevy_ascii_tetris-c8f43940bb9113d4.js  index.html
.github/workflows/: release.yaml
credits/: CREDITS.md
src/: board.rs  main.rs  piece.rs  score.rs  shuffle_bag.rs  window.rs
web/: ascii_tetris.js
