[package]
name = "bevy_ascii_tetris"
version = "0.2.0"
publish = false
authors = ["Sark"]
edition = "2024"
exclude = ["dist", "build", "assets", "credits"]

[dependencies.bevy]
version = "0.15"
default-features = false
features = ["bevy_asset", "bevy_winit", "bevy_render", "bevy_state", "wav", "vorbis", "png", "x11", "webgl2"]

[dependencies]
rand = "0.8.3"
bevy_ascii_terminal = "0.16"